// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identity selectors address 1`] = `"zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9sly"`;

exports[`identity selectors balance for usd 1`] = `"67.166008"`;

exports[`identity selectors balance for zec 1`] = `"33.583004"`;

exports[`identity selectors data 1`] = `
Immutable.Identity {
  "id": null,
  "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9sly",
  "transparentAddress": "t14oHp2v54vfmdgQ3v3SNuQga8JKHTNi2a1",
  "signerPrivKey": Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "signerPubKey": Object {
    "data": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "type": "Buffer",
  },
  "name": "Saturn",
  "shippingData": Immutable.ShippingData {
    "firstName": "Saturn",
    "lastName": "the Planet",
    "street": "Coders Dv",
    "country": "Poland",
    "region": "Malopolska",
    "city": "Krakow",
    "postalCode": "1337-455",
  },
  "balance": "33.583004",
  "lockedBalance": "12.583004",
  "donationAllow": "false",
  "shieldingTax": true,
  "donationAddress": "test",
}
`;

exports[`identity selectors donation 1`] = `
Object {
  "address": "test",
  "allow": "false",
}
`;

exports[`identity selectors donationAddress 1`] = `"test"`;

exports[`identity selectors donationAllow 1`] = `"false"`;

exports[`identity selectors identity 1`] = `
Immutable.IdentityState {
  "data": Immutable.Identity {
    "id": null,
    "address": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9sly",
    "transparentAddress": "t14oHp2v54vfmdgQ3v3SNuQga8JKHTNi2a1",
    "signerPrivKey": Object {
      "data": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "signerPubKey": Object {
      "data": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "type": "Buffer",
    },
    "name": "Saturn",
    "shippingData": Immutable.ShippingData {
      "firstName": "Saturn",
      "lastName": "the Planet",
      "street": "Coders Dv",
      "country": "Poland",
      "region": "Malopolska",
      "city": "Krakow",
      "postalCode": "1337-455",
    },
    "balance": "33.583004",
    "lockedBalance": "12.583004",
    "donationAllow": "false",
    "shieldingTax": true,
    "donationAddress": "test",
  },
  "fetchingBalance": false,
  "loader": Immutable.Record {
    "loading": true,
    "message": "Test loading message",
  },
  "errors": "",
}
`;

exports[`identity selectors loader 1`] = `
Immutable.Record {
  "loading": true,
  "message": "Test loading message",
}
`;

exports[`identity selectors lockedBalance for usd 1`] = `"25.166008"`;

exports[`identity selectors lockedBalance for zec 1`] = `"12.583004"`;

exports[`identity selectors shippingData 1`] = `
Immutable.ShippingData {
  "firstName": "Saturn",
  "lastName": "the Planet",
  "street": "Coders Dv",
  "country": "Poland",
  "region": "Malopolska",
  "city": "Krakow",
  "postalCode": "1337-455",
}
`;

exports[`identity selectors signerPrivKey 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`identity selectors signerPubKey 1`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`identity selectors transparentAddress 1`] = `"t14oHp2v54vfmdgQ3v3SNuQga8JKHTNi2a1"`;

exports[`identity selectors transparentBalance 1`] = `"0.3579"`;
